remove deprecated classes and methos e.g. Observer/Observable, Applet etc.